# tcd1304-viewer

./: pyproject.toml
tcd1304_viewer/: __main__.py  serial.py  viewer.py
tcd1304_viewer/WIP/: __main__.py
